fix navigation template and styles to properly show topbar icons on mobile view

--- a/app/app/styles/_flags.scss
+++ b/app/app/styles/_flags.scss
@@ -42,7 +42,7 @@
 .language-small-wrapper{
 	position: relative;
 	vertical-align: top;
-	top: 3px;
+	top: 1px;
 	font-size: 1rem !important;
 
 	.fa-inverse{
